Fix: TTF-492 bottom spacing
https://digitaltools.phe.org.uk/browse/TTF-492

--- a/app/shared/components/Nav/_style.scss
+++ b/app/shared/components/Nav/_style.scss
@@ -105,7 +105,6 @@
 
 
 .navbar-list {
-
   .nav-item {
     margin-right: 1.5rem;
     font-size: 2.4rem;
@@ -114,7 +113,7 @@
   .navbar-nav {
     .nav-link {
       color: $black;
-      padding: .3em .3em .15em;
+      padding: .2em .3em 0;
       border-bottom: 2px dotted $pink;
 
       &:active,
